<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Controllerproduto">

    <TextView
        android:text="@string/pronome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/idpronome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/promemoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/idpromemoria"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/prohd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/idprohd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/promarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/idpromarca"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/promodelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/idpromodelo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnsalvarComp"
        android:text="@string/btbsalvar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <ListView
        android:text="@string/listagemProdutos"
        android:id="@+id/idListViewComp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"></ListView>

</LinearLayout>
